--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
     <meta charset="ISO-8859-1">
     <meta charset="utf-8">
     <meta name="viewport" content="height=device-height,width=device-width, initial-scale=1">
-    <title>test app</title>
+    <title>Youtube Videos Data</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
