--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body ng-app="app" ng-controller="myCtrl" ng-init='getAllRecords()'>
+    <h3 class="page-heading">Youtube saved video links</h3>
     <table class="table table-bordered">
         <tr>
             <th class="col-md-3"> Title </th>
