--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,19 @@
 th{
     text-align: center;
 }
+body{
+    background: whitesmoke;
+}
 .like-icon{
     color:green;
 }
 .dislike-icon{
     color:red;
+}
+.page-heading{
+    text-align: center;
+    color: #545472;
+}
+table{
+    background: white;
 }
